Front - Fix mobile overflow problem

--- a/public/assets/scss/responsive.scss
+++ b/public/assets/scss/responsive.scss
@@ -87,7 +87,7 @@
                 margin-top: 50px;
             }
             .description {
-                top: 100px;
+                top: 75px;
                 width: 100%;
                 p {
                     margin: 40px auto;
@@ -108,6 +108,11 @@
                     margin-bottom : 35px;
                     &:last-child {
                         margin-bottom : 0;
+                        
+                    }
+                    &::after {
+                        content:'';
+                        display : none;
                     }
                 }
             }
